-
Bug
-
Resolution: Done
-
P1: Critical
-
5.0.0 Beta 1
-
Mac OS 10.6
-
-
d2864ffcc0dc91a64bb3b5d3cb649852f8a6b271
Designer crashes every time I close Designer with the following stack trace:
0 CoreFoundation 0x00007fff8a2f5784 __exceptionPreprocess + 180
1 libobjc.A.dylib 0x00007fff88106f03 objc_exception_throw + 45
2 CoreFoundation 0x00007fff8a2f55a7 +[NSException raise:format:arguments:] + 103
3 Foundation 0x00007fff82efc97a -[NSAssertionHandler handleFailureInMethod:object:file:lineNumber:description:] + 198
4 AppKit 0x00007fff88dc4902 -[NSMenu removeItem:] + 277
5 libqcocoa.dylib 0x000000010351620b _ZN10QCocoaMenu14removeMenuItemEP17QPlatformMenuItem + 59
6 QtWidgets 0x0000000100b8bc7d _ZN5QMenu11actionEventEP12QActionEvent + 1005
7 QtWidgets 0x0000000100a36d49 _ZN7QWidget5eventEP6QEvent + 3241
8 QtWidgets 0x0000000100b8f1bb _ZN5QMenu5eventEP6QEvent + 107
9 QtWidgets 0x00000001009f3b8d _ZN19QApplicationPrivate13notify_helperEP7QObjectP6QEvent + 189
10 QtWidgets 0x00000001009fc35a _ZN12QApplication6notifyEP7QObjectP6QEvent + 1146
11 QtCore 0x00000001016b97fc _ZN16QCoreApplication14notifyInternalEP7QObjectP6QEvent + 124
12 QtWidgets 0x0000000100a25ed5 _ZN7QWidget12removeActionEP7QAction + 149
13 QtWidgets 0x00000001009ee20b _ZN7QActionD0Ev + 91
14 QtCore 0x00000001016e470f _ZN14QObjectPrivate14deleteChildrenEv + 79
15 QtCore 0x00000001016e9b47 _ZN7QObjectD2Ev + 1527
16 QtDesignerComponents 0x000000010025dcaf _ZN18qdesigner_internal16ExtensionFactoryI26QDesignerTaskMenuExtension7QWidgetNS_17QDesignerTaskMenuEED0Ev + 207
17 QtCore 0x00000001016e470f _ZN14QObjectPrivate14deleteChildrenEv + 79
18 QtCore 0x00000001016e9b47 _ZN7QObjectD2Ev + 1527
19 QtDesigner 0x000000010046321e _ZN17QExtensionManagerD0Ev + 94
20 QtCore 0x00000001016e470f _ZN14QObjectPrivate14deleteChildrenEv + 79
21 QtCore 0x00000001016e9b47 _ZN7QObjectD2Ev + 1527
22 QtDesignerComponents 0x0000000100259fbf _ZN18qdesigner_internal10FormEditorD0Ev + 31
23 QtCore 0x00000001016e470f _ZN14QObjectPrivate14deleteChildrenEv + 79
24 QtCore 0x00000001016e9b47 _ZN7QObjectD2Ev + 1527
25 Designer 0x00000001000264e0 _ZN18QDesignerWorkbenchD0Ev + 176
26 Designer 0x000000010001d288 _ZN9QDesignerD1Ev + 84
27 Designer 0x000000010001be9f main + 64
28 Designer 0x000000010000419c start + 52
It seems to be related to menus. Context menus seems pretty broken at the moment, as you can only open them once, which is probably related to the issue above. Popup menues (comboboxes) does also not work when places inside a modal dialog (which can be seen in the "new form" dialog when launching designer)
- is required for
-
QTBUG-26922
Qt 5.0 Beta 1 tasks
-
- Closed
-